# datboi

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.config/: nextest.toml
.github/workflows/: container.yml
crates/datboi/: Cargo.toml
crates/datboi-api/: Cargo.toml  openapi.json
crates/datboi-api/src/: lib.rs  paths.rs  wire.rs
crates/datboi-catalog/: Cargo.toml
crates/datboi-catalog/src/: audit.rs  clonelist.rs  diff.rs  export.rs  fat32.rs  fetch.rs  image.rs  import.rs  lib.rs  mame.rs  profiles.rs  rollup.rs  selection.rs  state.rs  statesnap.rs  unify.rs  views.rs
crates/datboi-catalog/tests/: catalog.rs  image.rs  scale.rs  statesnap.rs
crates/datboi-core/: Cargo.toml
crates/datboi-core/src/: alias.rs  assemble.rs  cbor.rs  hash.rs  identity.rs  lib.rs  object.rs  params.rs  recipe.rs  snapshot.rs  viewsnap.rs
crates/datboi-emu-ds/: Cargo.toml  README.md
crates/datboi-emu-ds/asset/: descriptor.json  worker.js
crates/datboi-emu-ds/src/: audio.rs  lib.rs  renderer_3d.rs
crates/datboi-emu-ds/test-page/: index.html
crates/datboi-ex-7z/: Cargo.toml  README.md  build.rs
crates/datboi-ex-7z/csrc/: glue.c
crates/datboi-ex-7z/nix/: lzma-sdk.nix
crates/datboi-ex-7z/src/: lib.rs
crates/datboi-ex-unrar/: Cargo.toml  README.md  build.rs
crates/datboi-ex-unrar/csrc/: shim.cpp
crates/datboi-ex-unrar/csrc/compat/: datboi_compat.h
crates/datboi-ex-unrar/csrc/compat/sys/: file.h
crates/datboi-ex-unrar/nix/: unrar-src.nix
crates/datboi-ex-unrar/nix/patches/: 0001-guard-cpu-supports-non-glibc.patch  0002-d58-exceptions-to-wasm-traps.patch
crates/datboi-ex-unrar/src/: lib.rs
crates/datboi-exec/: Cargo.toml
crates/datboi-exec/src/: evict.rs  lib.rs  pipe.rs  policy.rs  random.rs  scrub.rs  swap.rs
crates/datboi-exec/tests/: affine_carveout.rs  ecm_shrink.rs  evict.rs  exec.rs  fat32_image.rs  gate.rs  preflate_shrink.rs  shrink.rs  swap.rs  sync_probe.rs
crates/datboi-formats/: Cargo.toml
crates/datboi-formats/src/: chd.rs  cmpro.rs  lib.rs  listxml.rs  logiqx.rs  model.rs  skipper.rs  softlist.rs  xmlutil.rs
crates/datboi-formats/tests/: dat_fixtures.rs  skipper_fixtures.rs
crates/datboi-formats/tests/fixtures/: fds.xml  listxml.xml  logiqx_nointro.xml  lynx.xml  nes.xml  softlist.xml
crates/datboi-guest-extractor/: Cargo.toml
crates/datboi-guest-extractor/src/: cbor.rs  lib.rs
crates/datboi-guest-transform/: Cargo.toml
crates/datboi-guest-transform/src/: lib.rs
crates/datboi-index/: Cargo.toml
crates/datboi-index/src/: analysis.rs  auth.rs  blobs.rs  dats.rs  gc.rs  jobs.rs  lib.rs  recipes.rs  schema.rs  state.rs  types.rs
crates/datboi-index/tests/: db.rs
crates/datboi-ingest/: Cargo.toml  build.rs
crates/datboi-ingest/src/: analyzers.rs  archive.rs  lib.rs  narc.rs  nds.rs  refine.rs  zip.rs
crates/datboi-ingest/tests/: archive.rs  d92.rs  ingest.rs  narc.rs  nds.rs  refine.rs
crates/datboi-ingest/tests/fixtures/: arm64.7z  bcj.7z  bcj2.7z  bcj2lzma.7z  chain3.7z  delta.7z  ppmd.7z  version.7z
crates/datboi-p2p/: Cargo.toml
crates/datboi-p2p/proptest-regressions/: riblt.txt
crates/datboi-p2p/src/: lib.rs  recon.rs  riblt.rs  sync.rs  testnet.rs
crates/datboi-p2p/src/recon/: envelope.rs
crates/datboi-p2p/testdata/riblt/golden/: cases.txt
crates/datboi-runtime/: Cargo.toml  build.rs
crates/datboi-runtime/src/: attribution.rs  extractor.rs  lib.rs  stream.rs
crates/datboi-runtime/tests/: attribution.rs  cso.rs  determinism.rs  ecm.rs  extractor.rs  extractor_7z.rs  preflate.rs  streaming.rs
crates/datboi-runtime/tests/fixtures/: preflate_member.deflate  xf_preflate.wasm  xf_reference.wasm  xf_reference_stream.wasm
crates/datboi-server/: Cargo.toml  build.rs
crates/datboi-server/src/: admin.rs  analyzers.rs  api.rs  auth.rs  compress.rs  dats.rs  dav.rs  emu.rs  gc.rs  hardening.rs  http.rs  ingest.rs  jobs.rs  lib.rs  maintain.rs  nfs.rs  refine.rs  vfs.rs  views.rs  web.rs
crates/datboi-server/tests/: api.rs  gc.rs  http.rs  ingest.rs
crates/datboi-store-fs/: Cargo.toml
crates/datboi-store-fs/src/: crash.rs  layout.rs  lib.rs  obao.rs  pack.rs  store.rs
crates/datboi-store-fs/tests/: concurrency.rs  crash_harness.rs  pack.rs
crates/datboi-xf-cso/: Cargo.toml
crates/datboi-xf-cso/src/: lib.rs
crates/datboi-xf-ecm/: Cargo.toml
crates/datboi-xf-ecm/src/: lib.rs
crates/datboi-xf-preflate/: Cargo.toml
crates/datboi-xf-preflate/src/: lib.rs
crates/datboi-xf-reference/: Cargo.toml
crates/datboi-xf-reference-stream/: Cargo.toml
crates/datboi-xf-reference-stream/src/: lib.rs
crates/datboi-xf-reference/src/: lib.rs
crates/datboi/src/: cmds.rs  config.rs  main.rs
crates/datboi/tests/: cli.rs
docs/: 00-vision.md  10-cas.md  20-transforms.md  30-runtime.md  40-p2p.md  50-infra.md  65-schema.md  70-recipes.md  80-views.md  85-cli.md  87-web-ui.md  88-emulation.md  89-saves.md  90-roadmap.md  README.md  cas.md  dats.md  decisions.md  emulation.md  infra.md  open-questions.md  p2p.md  roadmap.md  runtime.md  saves.md  schema.md  transforms.md  views.md  web-ui.md  worlds.md
nix/: module.nix
transforms/: Cargo.toml
transforms/ex-unrar/: Cargo.toml  build.rs
transforms/ex-unrar/csrc/: glue.cpp  shim.cpp
transforms/ex-unrar/csrc/compat/: grp.h  pwd.h
transforms/ex-unrar/src/: lib.rs
transforms/wit/: transform.wit
transforms/wit/ex1/: extractor.wit
transforms/wit/v2/: transform.wit
transforms/xf-cso/: Cargo.toml
transforms/xf-cso/src/: lib.rs
transforms/xf-ecm/: Cargo.toml
transforms/xf-ecm/src/: lib.rs
transforms/xf-preflate/: Cargo.toml
transforms/xf-preflate/src/: lib.rs
transforms/xf-reference/: Cargo.toml
transforms/xf-reference-stream/: Cargo.toml
transforms/xf-reference-stream/src/: lib.rs
transforms/xf-reference/src/: lib.rs
web/: .gitignore  .npmrc  README.md  index.html  package-lock.json  package.json  result  tsconfig.json  tsconfig.node.json  vite.config.ts  wuchale.config.js
web/src/: App.svelte  App.test.ts  main.ts
wit/ex1/: extractor.wit
wit/v2/: transform.wit
(+82 files in other folders)
