# Host workspace. The wasm transforms live in their own workspace under
# transforms/ (different target/profile; see docs/50-infra.md).
[workspace]
resolver = "2"
members = ["crates/*"]
# The transforms are standalone workspaces (D54); excluding them lets
# host crates path-depend on a transform's PURE logic (gates cross-check
# wasm vs native, analyzers reuse classify/rebuild) without merging the
# dependency graphs that keep component bytes reproducible.
exclude = ["transforms"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Chaz Schlarp"]
license = "MIT"
repository = "https://github.com/schlarpc/datboi"

[workspace.dependencies]
datboi-catalog = { path = "crates/datboi-catalog" }
datboi-core = { path = "crates/datboi-core" }
datboi-exec = { path = "crates/datboi-exec" }
datboi-formats = { path = "crates/datboi-formats" }
datboi-index = { path = "crates/datboi-index" }
datboi-ingest = { path = "crates/datboi-ingest" }
datboi-runtime = { path = "crates/datboi-runtime" }
datboi-server = { path = "crates/datboi-server" }
datboi-store-fs = { path = "crates/datboi-store-fs" }

anyhow = "1"
assert_cmd = "2"
# The NFSv3 VFS trait is #[async_trait]; implementing it requires the
# same macro on our side.
async-trait = "0.1"
# The daemon's serving stack (docs/50-infra.md, docs/80-views.md: axum +
# tokio, ratified day-one surface). Only `datboi serve` enters the
# runtime; client subcommands stay blocking (ureq).
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
blake3 = "1"
# Named directly because dav-server's traits speak bytes::Bytes.
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
crc32fast = "1"
# WebDAV protocol engine over our snapshot VFS (docs/80-views.md names
# the stack). No default features: localfs/memfs backends stay out —
# the only filesystem is the view manifest.
dav-server = { version = "0.11", default-features = false }
# ed25519 signs the state snapshot (D15 recovery root); the keypair is also
# the future server/iroh identity. Signing is deterministic (RFC 8032), so a
# fixed seed + payload yields a fixed signature — golden-testable.
ed25519-dalek = "2"
# Trait-only dep: the daemon's streamed response bodies implement
# futures_core::Stream over an mpsc receiver (no futures runtime).
futures-core = "0.3"
# "std" so getrandom::Error implements std::error::Error (thiserror #[from]).
getrandom = { version = "0.2", features = ["std"] }
# rust_backend: no C dependency, deterministic output not required here
# (decompression only — compression never reproduces bytes anyway, D24).
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
md-5 = "0.10"
predicates = "3"
proptest = "1"
quick-xml = "0.38"
# `bundled` vendors and pins the SQLite build: reproducible under nix, the
# same library everywhere the daemon runs, and we control when the SQLite
# version (and thus JSONB availability) moves — a system libsqlite would
# reintroduce exactly the version drift the design forbids elsewhere.
rusqlite = { version = "0.37", features = ["bundled"] }
# In-process userspace NFSv3 (docs/80-views.md: the primary mount,
# nfsserve lineage). Serves mount+portmap+nfs on one TCP port; no
# kernel export, no root.
nfsserve = "0.11"
# Value-construction only (JSONB column text); no serde derive anywhere.
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
# Daemon runtime only (see axum note). rt-multi-thread because range
# execution is blocking work fanned out via spawn_blocking.
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "macros", "signal", "sync", "time"] }
# Blocking HTTP for `dat fetch` (D16): small, no async runtime in the CLI.
ureq = "2"
# Component model + cranelift only; no wasi/async/cache — a pure, minimal,
# deterministic execution surface (D5/D6). `signals-based-traps` off keeps
# behavior uniform; we gate resources with fuel + StoreLimits instead.
wasmtime = { version = "38", default-features = false, features = ["runtime", "component-model", "cranelift"] }
# Test-only: hand-written component wat for the ambient-import rejection test.
wat = "1"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "allow" # enable when the API stabilizes

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
