# Host workspace. The wasm components (crates/datboi-xf-*, datboi-ex-*)
# are each their OWN standalone workspace with their own lockfile
# (D54/D66; different target/profile; see docs/50-infra.md) — the
# lockfile boundary is what keeps sibling changes from churning
# component bytes. Excluding them here lets host crates path-depend on
# a component's PURE logic (gates cross-check wasm vs native, analyzers
# reuse classify/rebuild) without merging the dependency graphs.
[workspace]
resolver = "2"
members = ["crates/*"]
# Bare `cargo run` means the CLI. Also scopes bare build/test to the
# datboi dep tree (build coverage is unchanged — the CLI pulls in every
# member — and CI passes --workspace to nextest/clippy so check
# coverage can't shrink) and keeps the gen-openapi dev tool out of the
# nix package's bin/.
default-members = ["crates/datboi"]
exclude = [
  "crates/datboi-xf-cso",
  "crates/datboi-xf-ecm",
  "crates/datboi-xf-preflate",
  "crates/datboi-xf-reference",
  "crates/datboi-xf-reference-stream",
  "crates/datboi-ex-unrar",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Chaz Schlarp"]
license = "MIT"
repository = "https://github.com/schlarpc/datboi"

[workspace.dependencies]
datboi-api = { path = "crates/datboi-api" }
datboi-catalog = { path = "crates/datboi-catalog" }
datboi-core = { path = "crates/datboi-core" }
datboi-exec = { path = "crates/datboi-exec" }
datboi-formats = { path = "crates/datboi-formats" }
datboi-index = { path = "crates/datboi-index" }
datboi-ingest = { path = "crates/datboi-ingest" }
datboi-runtime = { path = "crates/datboi-runtime" }
datboi-server = { path = "crates/datboi-server" }
datboi-store-fs = { path = "crates/datboi-store-fs" }

anyhow = "1"
# Password hashing for auth v1 (D30/D68): argon2id, default params. The
# daemon is the only hasher — accounts are minted by accepting invites
# over HTTP, so the CLI never needs it.
argon2 = "0.5"
assert_cmd = "2"
# The NFSv3 VFS trait is #[async_trait]; implementing it requires the
# same macro on our side.
async-trait = "0.1"
# The daemon's serving stack (docs/50-infra.md, docs/80-views.md: axum +
# tokio, ratified day-one surface). Only `datboi serve` enters the
# runtime; client subcommands stay blocking (ureq).
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
blake3 = "1"
# Named directly because dav-server's traits speak bytes::Bytes.
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
crc32fast = "1"
# WebDAV protocol engine over our snapshot VFS (docs/80-views.md names
# the stack). No default features: localfs/memfs backends stay out —
# the only filesystem is the view manifest.
dav-server = { version = "0.11", default-features = false }
# ed25519 signs the state snapshot (D15 recovery root); the keypair is also
# the future server/iroh identity. Signing is deterministic (RFC 8032), so a
# fixed seed + payload yields a fixed signature — golden-testable.
ed25519-dalek = "2"
# Trait-only dep: the daemon's streamed response bodies implement
# futures_core::Stream over an mpsc receiver (no futures runtime).
futures-core = "0.3"
# "std" so getrandom::Error implements std::error::Error (thiserror #[from]).
getrandom = { version = "0.2", features = ["std"] }
# rust_backend: no C dependency, deterministic output not required here
# (decompression only — compression never reproduces bytes anyway, D24).
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# Embeds the nix-built web dist (D67) — takes the DATBOI_WEB_DIST
# env-var path directly (rust-embed rejected there as the bigger
# surface for the same job).
include_dir = "0.7"
md-5 = "0.10"
predicates = "3"
proptest = "1"
quick-xml = "0.38"
# `bundled` vendors and pins the SQLite build: reproducible under nix, the
# same library everywhere the daemon runs, and we control when the SQLite
# version (and thus JSONB availability) moves — a system libsqlite would
# reintroduce exactly the version drift the design forbids elsewhere.
rusqlite = { version = "0.37", features = ["bundled"] }
# statfs for the D15 guard in datboi-index: refuse to open the embedded
# databases on a network filesystem. Safe wrapper — the workspace warns
# on unsafe_code.
rustix = { version = "1", features = ["fs"] }
# In-process userspace NFSv3 (docs/80-views.md: the primary mount,
# nfsserve lineage). Serves mount+portmap+nfs on one TCP port; no
# kernel export, no root.
nfsserve = "0.11"
# Trait bounds only (`T: Serialize`) outside the contract crate: D69
# scopes the derive ban to identity-bearing encodings (CAS canonical
# bytes, D18) — crates/datboi-api is the ONE crate that may enable the
# derive feature.
serde = "1"
# Value construction (JSONB column text, CLI --json output) and the
# contract crate's spec emission. Same D69 scoping as serde: derives
# live in crates/datboi-api and nowhere else.
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
# Daemon runtime only (see axum note). rt-multi-thread because range
# execution is blocking work fanned out via spawn_blocking.
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "macros", "signal", "sync", "time"] }
# Blocking HTTP for `dat fetch` (D16): small, no async runtime in the CLI.
ureq = "2"
# OpenAPI 3.1 emission for the /v1 contract (D69). datboi-api only —
# the ToSchema/path derives are part of the same D69 carve-out as serde.
utoipa = "5"
# Component model + cranelift only; no wasi/async/cache — a pure, minimal,
# deterministic execution surface (D5/D6). `signals-based-traps` off keeps
# behavior uniform; we gate resources with fuel + StoreLimits instead.
wasmtime = { version = "38", default-features = false, features = ["runtime", "component-model", "cranelift"] }
# Test-only: hand-written component wat for the ambient-import rejection test.
wat = "1"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "allow" # enable when the API stabilizes

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
