# Wasm transforms workspace — separate from the host workspace because the
# target (wasm32-unknown-unknown, D42) and profiles differ (docs/50-infra.md).
[workspace]
resolver = "2"
members = ["xf-preflate", "xf-reference", "xf-reference-stream"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Chaz Schlarp"]
license = "MIT"
repository = "https://github.com/schlarpc/datboi"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
# Transforms are content-addressed artifacts: favor small, stable output.
opt-level = "s"
lto = true
strip = true
