[package]
name = "datboi-catalog"
description = "Dat import, content-identity unification, audit rollups, dir2dat export"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
datboi-core.workspace = true
datboi-formats.workspace = true
datboi-index.workspace = true
# D16 dat auto-fetch (fetch.rs) unwraps zipped datfiles through the D35
# zip walker — the same primitive zipped-dat ingest uses.
datboi-ingest.workspace = true
datboi-store-fs.workspace = true
positioned-io = { version = "0.3", default-features = false }
quick-xml.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# D81 daemon logging: events only; no subscriber in library code.
tracing.workspace = true
# D16 dat auto-fetch: one blocking HTTP request (client verbs stay
# blocking — the same ureq the CLI used before the descent).
ureq.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
