[package]
name = "datboi-core"
description = "CAS object model, hashing, recipes, typestate domain model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
thiserror.workspace = true

[lints]
workspace = true
