[package]
name = "datboi-exec"
description = "Streaming recipe executor: operator trees, spill rule, replay licensing (D25), range serving (D49)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
datboi-core.workspace = true
datboi-index.workspace = true
datboi-runtime.workspace = true
datboi-store-fs.workspace = true
flate2.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
crc32fast.workspace = true
datboi-ingest.workspace = true
proptest.workspace = true

[lints]
workspace = true
