[package]
name = "datboi-index"
description = "Metadata DB layer: cache.db (derivable, nukeable) + state.db (authoritative-until-snapshotted)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
datboi-core.workspace = true
rusqlite.workspace = true
rustix.workspace = true
thiserror.workspace = true
# D81 daemon logging: events only; no subscriber in library code.
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
