[package]
name = "datboi-ingest"
description = "M1 ingest pipeline: rescan cache, streaming store+hash, zip members-as-claims, skipper dual identities"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
datboi-core.workspace = true
datboi-formats.workspace = true
datboi-index.workspace = true
datboi-store-fs.workspace = true
# rar extraction now runs the ex-unrar component under the wasm sandbox
# (D58); ingest drives it through the runtime's ExtractorHost. The native
# unrar/unrar_sys crates left the tree with this change.
datboi-runtime.workspace = true
fastcdc = "4.0.1"
flate2.workspace = true
blake3.workspace = true
preflate-rs = "=0.7.6"
# Native twin of the shipped component: the analyzer classifies with the
# same code the component rebuilds with (verify-at-discovery).
xf-ecm = { path = "../../transforms/xf-ecm" }
# 7z member extraction (pure Rust). Container rebuild recipes wait on an
# LZMA-class transform; ingest extracts members as first-class blobs.
sevenz-rust2 = "0.21"
thiserror.workspace = true

[dev-dependencies]
crc32fast.workspace = true
tempfile.workspace = true
# The rar ingest test replays the minted derive recipe (evict → rebuild
# the member through the ex-unrar component) end to end.
datboi-exec.workspace = true

[lints]
workspace = true
