# M6 p2p subsystem (docs/p2p.md, D97/D99). A daemon background subsystem
# under `datboi serve` — NOT a permanent standalone like the wasm
# components; it links into datboi-server. (It began as an excluded spike
# so the churny iroh tree wouldn't touch the host lockfile before the
# design settled; that scaffolding is gone now that it's core.)
[package]
name = "datboi-p2p"
description = "M6 p2p: iroh-blobs transport fronting the datboi logical CAS"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Front the logical CAS (D92/D97): resident literals AND grounded-but-
# evicted blobs materialized on demand, through one `serve_range` seam.
datboi-core.workspace = true
datboi-store-fs.workspace = true
datboi-exec.workspace = true
datboi-index.workspace = true
iroh.workspace = true
iroh-blobs.workspace = true
bao-tree.workspace = true
blake3.workspace = true
anyhow.workspace = true
tokio.workspace = true
# D81 logging + the D97/D100 savings telemetry (named numeric fields).
tracing.workspace = true
# ReadAt for the forward-only adapter that lets the random-access bao
# encoder drive the executor's sequential stream (same crate bao-tree uses).
positioned-io = { version = "0.3", default-features = false }
# The riblt coded-symbol checksum (D100): SipHash-2-4 under fixed protocol
# keys, matching the reference implementation's checksum construction.
siphasher = "1"

[dev-dependencies]
tempfile.workspace = true
# Build a deflate container for the virtual-blob test's recipe.
flate2.workspace = true

[lints]
workspace = true
