[package]
name = "datboi-runtime"
description = "wasmtime host for deterministic sandboxed transforms (datboi:transform world)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# wasmtime host traits speak anyhow (wasmtime::Result).
anyhow.workspace = true
datboi-core.workspace = true
thiserror.workspace = true
wasmtime.workspace = true

[dev-dependencies]
blake3.workspace = true
wat.workspace = true

[lints]
workspace = true
