[package]
name = "datboi-server"
description = "The datboi daemon (12-factor; invite/session auth per D30/D68, loopback stays owner)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
bytes.workspace = true
getrandom.workspace = true
async-trait.workspace = true
# ViewDef decode + the audit read models behind /v1 (M5 web API).
datboi-catalog.workspace = true
datboi-core.workspace = true
datboi-exec.workspace = true
datboi-index.workspace = true
datboi-store-fs.workspace = true
dav-server.workspace = true
futures-core.workspace = true
include_dir.workspace = true
nfsserve.workspace = true
# The /v1 read models query cache.db directly (same SQL family as
# `datboi status`/`datboi audit` — see api.rs).
rusqlite.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
ureq.workspace = true

[lints]
workspace = true
